# dect_open_stack_ms

./: CMakeLists.txt  README.md  dect_nrplus_reference_stack_v3.md
lib/dect_nrplus/: CMakeLists.txt  Kconfig  Kconfig.dect_cdd  Kconfig.dect_cvg  Kconfig.dect_dlc  Kconfig.dect_l2  Kconfig.dect_mac  Kconfig.dect_module  Kconfig.dect_nrplus  Kconfig.dect_security  dect_cdd.c  dect_cvg copy.c  dect_cvg.c  dect_dlc copy.c  dect_dlc.c  dect_nrplus_l2.c  dect_security_crypto.c  dect_stack_api.c
lib/dect_nrplus/docs/: overview.md  overview.rtf
lib/dect_nrplus/include/: dect_cdd.h  dect_cvg.h  dect_dlc.h  dect_security_crypto.h  dect_stack_api.h  net_platform_time.h
lib/dect_nrplus/include/mac/: dect_mac.h  dect_mac_context.h  dect_mac_core.h  dect_mac_data_path.h  dect_mac_main_dispatcher.h  dect_mac_mgmt.h  dect_mac_nvs.h  dect_mac_pdu.h  dect_mac_phy_ctrl.h  dect_mac_phy_if.h  dect_mac_phy_tbs_tables.h  dect_mac_random.h  dect_mac_security.h  dect_mac_sm.h  dect_mac_sm_ft.h  dect_mac_sm_pt.h  dect_mac_timeline_utils.h  dect_mac_types.h  nrf_modem_dect_phy.h
lib/dect_nrplus/include/mocks/: mock_nrf_modem_dect_phy - Copy.h  mock_nrf_modem_dect_phy copy.h  mock_nrf_modem_dect_phy.h  mock_nrf_modem_dect_phyOLD.h  mock_nrf_modem_dect_phy_enhanced.h
lib/dect_nrplus/mac/: CMakeLists.txt  dect_mac.c  dect_mac_api.c  dect_mac_core.c  dect_mac_data_path.c  dect_mac_main.c  dect_mac_main_dispatcher.c  dect_mac_mgmt.c  dect_mac_nvs.c  dect_mac_pdu.c  dect_mac_phy_ctrl.c  dect_mac_phy_if.c  dect_mac_phy_tbs_tables.c  dect_mac_random.c  dect_mac_security.c  dect_mac_shell.c  dect_mac_sm_ft.c  dect_mac_sm_pt.c  dect_mac_timeline_utils.c  mock_nrf_modem_dect_phy - Copy.c  mock_nrf_modem_dect_phy copy fixes.c  mock_nrf_modem_dect_phy.c
lib/dect_nrplus/tests/: CMakeLists.txt  Kconfig
lib/dect_nrplus/tests/advanced_mac/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/advanced_mac/src/: main.c
lib/dect_nrplus/tests/cdd_service/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/cdd_service/src/: main.c
lib/dect_nrplus/tests/cvg_advanced/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/cvg_advanced/src/: main.c
lib/dect_nrplus/tests/cvg_arq/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/cvg_arq/src/: main.c
lib/dect_nrplus/tests/cvg_security/: CMakeLists.txt  native_sim.conf  prj.conf  testcase.yaml
lib/dect_nrplus/tests/cvg_security/boards/: nrf9151dk_nrf9151_ns.conf  nrf9161dk_nrf9161_ns.conf
lib/dect_nrplus/tests/cvg_security/src/: main.c
lib/dect_nrplus/tests/dlc_advanced/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/dlc_advanced/src/: main.c
lib/dect_nrplus/tests/dlc_arq/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/dlc_arq/src/: main.c
lib/dect_nrplus/tests/dlc_sar/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/dlc_sar/src/: main.c
lib/dect_nrplus/tests/l2_6lowpan/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/l2_6lowpan/boards/: nrf9161dk_nrf9161_ns.conf  nrf9161dk_nrf9161_ns.overlay
lib/dect_nrplus/tests/l2_6lowpan/src/: main.c  main.c.txt
lib/dect_nrplus/tests/mac_api/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_api/boards/: nrf9151dk_nrf9151_ns.overlay.txt
lib/dect_nrplus/tests/mac_api/src/: main.c
lib/dect_nrplus/tests/mac_ass/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_ass/boards/: native_sim_64.conf  nrf9161dk_nrf9161_ns.conf
lib/dect_nrplus/tests/mac_ass/src/: main - Working.c  main.c
lib/dect_nrplus/tests/mac_ass_extra/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_ass_extra/boards/: nrf9151dk_nrf9151_ns.conf
lib/dect_nrplus/tests/mac_ass_extra/src/: main.c
lib/dect_nrplus/tests/mac_ass_multi/: prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_ass_multi/boards/: native_sim_64.conf  nrf9161dk_nrf9161_ns.conf
lib/dect_nrplus/tests/mac_ass_multi/src/: main copy.c  main.c
lib/dect_nrplus/tests/mac_ass_security/: CMakeLists.txt  mbedtls_native_sim_config.h  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_ass_security/boards/: native_sim_64.conf  nrf9161dk_nrf9161_ns.conf
lib/dect_nrplus/tests/mac_ass_security/src/: main.c
lib/dect_nrplus/tests/mac_error_handling/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_error_handling/src/: main.c
lib/dect_nrplus/tests/mac_flow/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_flow/src/: main.c  main.c.txt  mock_nrf_modem_dect_phy.c.txt
lib/dect_nrplus/tests/mac_ft_beacon/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_ft_beacon/src/: main.c
lib/dect_nrplus/tests/mac_mobility/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_mobility/boards/: native_sim_native_64.conf  nrf9151dk_nrf9151_ns.conf  nrf9161dk_nrf9161_ns.conf
lib/dect_nrplus/tests/mac_mobility/src/: main.c  mobility.c.txt
lib/dect_nrplus/tests/mac_pdu/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_pdu/src/: main.c
lib/dect_nrplus/tests/mac_phy_ctrl/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_phy_ctrl/src/: main.c
lib/dect_nrplus/tests/mac_security/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/mac_security/boards/: nrf9161dk_nrf9161_ns.conf
lib/dect_nrplus/tests/stack_integration/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/stack_integration_2/: CMakeLists.txt  prj.conf  testcase.yaml
lib/dect_nrplus/tests/twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
lib/dect_nrplus/tests/utils/: test_harness_helpers.c  test_harness_helpers.h  virtual_timer.c  virtual_timer.h
samples/dect_samples/dect_nrplus_ping/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/dect_samples/dect_nrplus_ping/boards/: native_sim_64.conf  native_sim_ft.conf  native_sim_pt.conf  nrf9161dk_nrf9161_ns_ft.conf  nrf9161dk_nrf9161_ns_pt.conf
samples/dect_samples/dect_nrplus_ping/src/: main.c
(+67 files in other folders)
